lab-wangw-k8s/yaml/central-sink-svc.yaml
kind: Service 
apiVersion: v1 
metadata:
  name: sink-service 
spec:
  # Expose the service on a static port on each node
  # so that we can access the service from outside the cluster 
  type: ClusterIP
  # When the node receives a request on the static port (30163)
  # "select pods with the label 'app' set to 'echo-hostname'"
  # and forward the request to one of them
  selector:
    selectorId: central-wangw-sink-xap-pu
  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - port: 8200 
      targetPort: 8200
      name: comunication
