lab-wangw-k8s/yaml/ingress-rule-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/affinity-mode: persistent
spec:
  ingressClassName: nginx
  rules:
  - host: a8cb52a096b764ae5b3363323e80bec6-927649032.eu-west-1.elb.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: /grafana(/|$)(.*)
        backend:
          service:
            name: xap-grafana
            port:
              number: 3000
